--- a/index.html
+++ b/index.html
@@ -15,38 +15,34 @@
 
 <body>
     <div class="container">
-        <div id ="orange" class="center">
+        <div id="orange" class="center">
             <img src="/img/kodluyoruzlogo.png" alt="" id="logobg" class="mt-3">
             <div id="menu-text">Yapılacaklar Listesi</div>
-                <input type="text" name="inputtext" id="inputumuz" placeholder="Bugün ne yapacaksın?">
-                <input class="mb-3" type="button" value="Ekle" id="butonumuz">
+            <input type="text" name="inputtext" id="inputumuz" placeholder="Bugün ne yapacaksın?">
+            <button id="butonumuz" type="button" onclick="yeniEleman()" class="button">Ekle</button>
         </div>
         <div class="uls">
-            <ul>
-                <a href="">
-                    <li>3 litre su iç <button type="button" class="close" aria-label="Close" id="butonx">
+            <ul id="list">
+                <a href="javascript:void(0)" onclick="tiklanma()" id="aid">
+                <li>3 litre su iç <button type="button" class="close" aria-label="Close" id="butonx">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    </li>
-                </a><a href="">
-                    <li>Ödevleri yap <button type="button" class="close" aria-label="Close" id="butonx">
-                        <span aria-hidden="true">&times;</span>
-                    </button></li>
-                </a><a href="">
-                    <li>3 saat kodlama yap <button type="button" class="close" aria-label="Close" id="butonx">
-                        <span aria-hidden="true">&times;</span>
-                    </button></li>
-                </a><a href="">
-                    <li>Yemek yap <button type="button" class="close" aria-label="Close" id="butonx">
-                        <span aria-hidden="true">&times;</span>
-                    </button></li>
-                </a><a href="">
-                    <li>100 sayfa kitap oku <button type="button" class="close" aria-label="Close" id="butonx">
-                        <span aria-hidden="true">&times;</span>
-                    </button></li>
+                </li>
                 </a>
+                <li>Ödevleri yap <button type="button" class="close" aria-label="Close" id="butonx">
+                        <span aria-hidden="true">&times;</span>
+                    </button></li>
+                <li>3 saat kodlama yap <button type="button" class="close" aria-label="Close" id="butonx">
+                        <span aria-hidden="true">&times;</span>
+                    </button></li>
+                <li>Yemek yap <button type="button" class="close" aria-label="Close" id="butonx">
+                        <span aria-hidden="true">&times;</span>
+                    </button></li>
+                <li>100 sayfa kitap oku <button type="button" class="close" aria-label="Close" id="butonx">
+                        <span aria-hidden="true">&times;</span>
+                    </button></li>
             </ul>
-            </div>
+        </div>
     </div>
 
 
@@ -69,7 +65,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
-        <script src="/js/main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
