button class changed delete button added

--- a/index.html
+++ b/index.html
@@ -23,24 +23,22 @@
         </div>
         <div class="uls">
             <ul id="list">
-                <a href="javascript:void(0)" onclick="tiklanma()" id="aid">
-                <li>3 litre su iç <button type="button" class="close" aria-label="Close" id="butonx">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                <li id="liid">3 litre su iç 
+                    <span id="silme" onclick="this.parentNode.style.display = 'none';" class="closebtn">&times;</span>
                 </li>
-                </a>
-                <li>Ödevleri yap <button type="button" class="close" aria-label="Close" id="butonx">
-                        <span aria-hidden="true">&times;</span>
-                    </button></li>
-                <li>3 saat kodlama yap <button type="button" class="close" aria-label="Close" id="butonx">
-                        <span aria-hidden="true">&times;</span>
-                    </button></li>
-                <li>Yemek yap <button type="button" class="close" aria-label="Close" id="butonx">
-                        <span aria-hidden="true">&times;</span>
-                    </button></li>
-                <li>100 sayfa kitap oku <button type="button" class="close" aria-label="Close" id="butonx">
-                        <span aria-hidden="true">&times;</span>
-                    </button></li>
+                <li id="liid">Ödevleri yap 
+                    <span id="silme" onclick="this.parentNode.style.display = 'none';"
+                        class="closebtn">&times;</span>
+                </li>
+                <li id="liid">3 saat kodlama yap 
+                    <span id="silme" onclick="this.parentNode.style.display = 'none';" class="closebtn">&times;</span>
+                </li>
+                <li id="liid">Yemek yap 
+                    <span id="silme" onclick="this.parentNode.style.display = 'none';" class="closebtn">&times;</span>
+                </li>
+                <li id="liid">100 sayfa kitap oku 
+                    <span id="silme" onclick="this.parentNode.style.display = 'none';" class="closebtn">&times;</span>
+                </li>
             </ul>
         </div>
     </div>
