"list style change"

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         </div>
         <div class="uls">
             <ul id="list">
-                <li id="liid">3 litre su iç 
-                    <span id="silme" onclick="this.parentNode.style.display = 'none';" class="closebtn">&times;</span>
+                <li id="liid" onclick="silme()">3 litre su iç 
+                    <span id="silme" onclick="this.parentNode.style.display = 'none';" class="closebtn">&times;</span>  
                 </li>
-                <li id="liid">Ödevleri yap 
+                <li id="liid" onclick="silme()">Ödevleri yap 
                     <span id="silme" onclick="this.parentNode.style.display = 'none';"
                         class="closebtn">&times;</span>
                 </li>
